<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
       <include layout="@layout/app_bar"/>
       <GridLayout
           android:layout_gravity="center_horizontal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:columnCount="2">
           <com.google.android.material.card.MaterialCardView
               android:id="@+id/mon_troupeau"
               android:layout_margin="@dimen/size_10"
               android:clickable="true"
               android:focusable="true"
               android:checkable="true"
               app:cardCornerRadius="@dimen/size_10"
               app:cardBackgroundColor="@color/blue_ciel_3"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content">
               <LinearLayout

                   android:layout_width="@dimen/size_100"
                   android:layout_height="@dimen/size_100"
                   android:gravity="center"
                   android:paddingHorizontal="@dimen/size_5"
                   android:paddingVertical="@dimen/size_25"
                   android:orientation="vertical">
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:padding="@dimen/size_5"
                       android:src="@drawable/ic_baseline_location_on_24"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textStyle="normal"
                       android:textSize="@dimen/size_9"
                       android:textColor="@color/i_blue"
                       android:text="@string/localiser_troupeau"/>
               </LinearLayout>
           </com.google.android.material.card.MaterialCardView>

           <com.google.android.material.card.MaterialCardView
               android:id="@+id/zone_paturage"
               android:clickable="true"
               android:focusable="true"
               android:checkable="true"
               android:layout_margin="@dimen/size_10"
               app:cardCornerRadius="@dimen/size_10"
               app:cardBackgroundColor="@color/blue_ciel_3"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content">
               <LinearLayout

                   android:layout_width="@dimen/size_100"
                   android:layout_height="@dimen/size_100"
                   android:gravity="center"
                   android:paddingHorizontal="@dimen/size_5"
                   android:paddingVertical="@dimen/size_25"
                   android:orientation="vertical">
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:padding="@dimen/size_5"
                       android:src="@drawable/ic_outline_settings_ethernet_24"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textStyle="normal"
                       android:textSize="@dimen/size_9"
                       android:textColor="@color/i_blue"
                       android:text="@string/zone_troupeau"/>
               </LinearLayout>
           </com.google.android.material.card.MaterialCardView>

           <com.google.android.material.card.MaterialCardView
               android:id="@+id/ma_position"
               android:clickable="true"
               android:focusable="true"
               android:checkable="true"
               android:layout_margin="@dimen/size_10"
               app:cardCornerRadius="@dimen/size_10"
               app:cardBackgroundColor="@color/blue_ciel_3"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content">
               <LinearLayout

                   android:layout_width="@dimen/size_100"
                   android:layout_height="@dimen/size_100"
                   android:gravity="center"
                   android:paddingHorizontal="@dimen/size_5"
                   android:paddingVertical="@dimen/size_25"
                   android:orientation="vertical">
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:padding="@dimen/size_5"
                       android:src="@drawable/ic_baseline_my_location_24"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textStyle="normal"
                       android:textSize="@dimen/size_9"
                       android:textColor="@color/i_blue"
                       android:text="@string/ma_position"/>
               </LinearLayout>
           </com.google.android.material.card.MaterialCardView>



           <com.google.android.material.card.MaterialCardView
               android:id="@+id/point_eau"
               android:clickable="true"
               android:focusable="true"
               android:checkable="true"
               android:layout_margin="@dimen/size_10"
               app:cardCornerRadius="@dimen/size_10"
               app:cardBackgroundColor="@color/blue_ciel_3"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content">
               <LinearLayout

                   android:layout_width="@dimen/size_100"
                   android:layout_height="@dimen/size_100"
                   android:gravity="center"
                   android:paddingHorizontal="@dimen/size_5"
                   android:paddingVertical="@dimen/size_25"
                   android:orientation="vertical">
                   <ImageView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:padding="@dimen/size_5"
                       android:src="@drawable/ic_sharp_opacity_24"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:textStyle="normal"
                       android:textSize="@dimen/size_9"
                       android:textColor="@color/i_blue"
                       android:text="@string/point_eau"/>
               </LinearLayout>
           </com.google.android.material.card.MaterialCardView>
       </GridLayout>
       <androidx.fragment.app.FragmentContainerView
           android:id="@+id/fragment_maps_hote"
           android:layout_width="match_parent"
           android:layout_height="match_parent"/>
   </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.Material3.NavigationView"
        app:headerLayout="@layout/header_nav"
        app:menu="@menu/menu"

        />
</androidx.drawerlayout.widget.DrawerLayout>